# CMTelegramBot-Aiogram

./: .env.example  Dockerfile  docker-compose.yaml  pyproject.toml
src/: app.py
src/application/fsm_states/: FSMAuth.py  FSMExternalServiceRequest.py
src/application/fsm_states/auth/: FSMAuth.py
src/application/keyboards/inline_keyboards/: external_services_keyboard.py
src/application/routes/: auth_router.py  external_service_router.py  profile_router.py  registration_key_router.py  router.py  start.py  start_router.py
src/domain/endpoints/: CMEndpoints.py
src/domain/model/: RegistrationKey.py  Session.py
src/domain/service/: RequestService.py
src/infrastructure/configuration/: Env.py
src/infrastructure/configuration/persistense/: RedisConnection0Client.py
src/infrastructure/configuration/properties/: BotProperties.py  CMProperties.py  Env.py  RedisProperties.py
src/infrastructure/persistense/redis/: RedisSessionRepository.py
src/routes/: start.py
