[project]
name = "cmtelegrambot"
version = "0.1.1"
description = ""
authors = [
    {name = "IFUNMAN",email = "www.vadimka20058@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
