[project]
name = "cmtelegrambot"
version = "0.2.0"
description = ""
readme = "README.md"
authors = [{name = "IFUNMAN",email = "www.vadimka20058@gmail.com"}]
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "redis (>=6.1.0,<7.0.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "http-noah (>=0.2.1,<0.3.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
